log pattern analysis
Signed-off-by: Hailong Cui <ihailong@amazon.com>